added text when the game is over

--- a/app/src/main/res/layout/activity_page_jeu.xml
+++ b/app/src/main/res/layout/activity_page_jeu.xml
@@ -7,6 +7,17 @@
     tools:context=".PageJeu"
     android:id="@+id/layoutJeu">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="30dp"
+        android:id="@+id/finishLabel"
+        app:layout_constraintTop_toBottomOf="@+id/grille"
+        app:layout_constraintBottom_toTopOf="@+id/numbers"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"></TextView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
