--- a/app/src/main/res/layout/activity_page_jeu.xml
+++ b/app/src/main/res/layout/activity_page_jeu.xml
@@ -7,6 +7,14 @@
     tools:context=".PageJeu"
     android:id="@+id/layoutJeu">
 
+    <FrameLayout
+        android:id="@+id/info_joueur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/numbers"
-        app:layout_constraintBottom_toTopOf="@+id/grise"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="30dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
@@ -35,33 +44,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="grise"
-        android:id="@+id/grise"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="\?"
-        android:id="@+id/indice"
-        app:layout_constraintEnd_toStartOf="@+id/grise"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/grise" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="terminer"
-        android:id="@+id/terminer"
-        app:layout_constraintStart_toEndOf="@+id/grise"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/grise"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
